Enable requireHeatStable by default

--- a/documentation/BME680.md
+++ b/documentation/BME680.md
@@ -47,7 +47,7 @@ Reads the sensor data.
 
 | Param | Type | Default | Description |
 | --- | --- | --- | --- |
-| [requireHeatStable] | <code>boolean</code> | <code>false</code> | A value that indicates whether heat should be stable before reading the sensor data. |
+| [requireHeatStable] | <code>boolean</code> | <code>true</code> | A value that indicates whether heat should be stable before reading the sensor data. |
 
 <a name="BME680+reset"></a>
 
